--- a/src/foursquair.mxml
+++ b/src/foursquair.mxml
@@ -36,14 +36,14 @@
     </mx:Style>
     <mx:Script>
         <![CDATA[
-        	import com.foursquare.util.AppDebuggerEvent;
+        	import mx.events.FlexEvent;
+        	import mx.events.EffectEvent;
         	import air.update.events.UpdateEvent;
         	import mx.controls.Image;
         	import mx.events.CollectionEvent;
             import mx.controls.Alert;
             import com.foursquare.api.*;
             import com.foursquare.util.XMLUtil;
-            import com.foursquare.util.AppDebugger;
             
             
             import mx.collections.ArrayCollection;
@@ -63,17 +63,21 @@
             import com.adobe.air.notification.AbstractNotification;
             import com.adobe.air.notification.Notification;
             import mx.utils.StringUtil;
+            import flash.filesystem.*; 
+            import air.update.ApplicationUpdaterUI;
+            
+            import mx.effects.easing.Bounce;
+            
             
             public var foursquare:FoursqaureService = new FoursqaureService('266d5934f6cb223fcd5ffc75eeb0a99404acf504c', '6265da6ce9bd8cb2c69632ae51836327');
+            
             [Bindable] public var checkins:ArrayCollection;
             [Bindable] public var actor:UserVO;
             [Bindable] public var venues:ArrayCollection = new ArrayCollection();
             [Bindable] public var currentVersion:String;
+            [Bindable] public var history:ArrayCollection = new ArrayCollection();
             
-            import flash.filesystem.*; 
-            public var oauthFile:File; 
-            
-            public var debugger:AppDebugger;
+            public var oauthFile:File;
             
             private var updateCheckTimer:Timer;
             
@@ -81,7 +85,6 @@
             private const iconURL: String = "assets/images/notification_dude.png";
             private var bmp: Bitmap = null;
             
-            import air.update.ApplicationUpdaterUI;
             var appUpdater:ApplicationUpdaterUI = new ApplicationUpdaterUI();
             
             private function getApp():foursquair{
@@ -134,7 +137,39 @@
                 appUpdater.initialize();
                 
                 currentVersion = appUpdater.currentVersion;
+                nav.getChildren().forEach(function(el:Button, indnex:int, arr:Array){
+                    el.addEventListener(MouseEvent.CLICK, handleNavButtonClick);
+                });
+                
+
+                viewstack1.getChildren().forEach(function(el:Canvas, index:int, arr:Array){
+                	el.addEventListener(FlexEvent.SHOW, function(e:FlexEvent):void{
+                		if(viewstack1.selectedIndex > viewstack1.getChildIndex(DisplayObject(outGoing))){
+                            ViewStackTransitionEffectStart.xFrom = viewstack1.width;
+                        }
+                        else{
+                            ViewStackTransitionEffectStart.xFrom = 0-viewstack1.width;
+                        }
+                        ViewStackTransitionEffectStart.target = e.target;
+                        ViewStackTransitionEffectStart.repeatCount = 1;
+                        ViewStackTransitionEffectStart.play();
+                	});
+                	el.addEventListener(FlexEvent.HIDE, function(e:FlexEvent){
+                		outGoing = e.target;
+                		if(viewstack1.selectedIndex > viewstack1.getChildIndex(DisplayObject(outGoing))){
+                			ViewStackTransitionEffectEnd.xTo = 0-viewstack1.width;
+                		}
+                		else{
+                			ViewStackTransitionEffectEnd.xTo = viewstack1.width;
+                		}
+                		
+                		ViewStackTransitionEffectEnd.target=outGoing;
+                		ViewStackTransitionEffectEnd.play();
+                		
+                	});
+                });
             }
+            var outGoing:*;
             
             private function init():void{
             	getApp().currentState = 'Splash';
@@ -180,10 +215,6 @@
                 appUpdater.checkNow();
             } 
             
-            public function showFlashMessage(msg:String):void{
-                
-            }
-            
             public function checkForUpdates(...rest):void{
             	log('checking for updates');
             	showIndicator(friendsLoadingIndicator);
@@ -210,54 +241,6 @@
                 );
             }
             
-            public function transition(from:Canvas,to:Canvas,direction:String):void{
-                var out:Move = new Move();
-                var incoming:Move = new Move();
-                if(direction=='right'){
-                    out.duration = 500;
-                    out.target = from;
-                    out.xTo = -900;
-                    to.visible = false;
-                    incoming.target = to;
-                    incoming.xTo = 900;
-                    incoming.play();
-                    incoming.end();
-                    to.visible = true;
-                    incoming.xTo = 0;
-                    out.play();
-                    incoming.play();
-                }
-                else {
-                    out.duration = 500;
-                    out.target = from;
-                    out.xTo = 900;
-                    to.visible = false;
-                    incoming.target = to;
-                    incoming.xTo = -900;
-                    incoming.play();
-                    incoming.end();
-                    to.visible = true;
-                    incoming.xTo = 0;
-                    out.play();
-                    incoming.play();
-                }
-                
-                var out_blur:Blur = new Blur();
-                out_blur.target = from;
-                out_blur.duration = 500;
-                out_blur.play();
-                
-                var incoming_blur:Blur = new Blur();
-                incoming_blur.target = to;
-                incoming_blur.duration = 500;
-                incoming_blur.blurXTo = 0.0;
-                incoming_blur.blurXFrom = 200.0;
-                incoming_blur.play();
-            }
-            
-            /**
-             * @todo (lucas) Be smarter about when to display notifications/make them more useful.
-             */ 
             private function addCheckins(c:Array, notify:Boolean=true):void{
             	log('adding checkins to display');
             	try{
@@ -317,17 +300,7 @@
             	foursquare.getUserDetails(
             	    0, 
             	    function(u:UserVO):void{
-	                    actor = u;
-	                    foursquare.actor = u;
-	                    /*
-	                    foursquare.getHistory(
-	                        20,
-	                        function(c:Array):void{
-	                            checkins = new ArrayCollection(c);
-	                            getApp().currentState = '';
-	                        }
-	                    );
-	                    */
+	                    actor = foursquare.actor = u;
 	                    log('getting checkins');
 	                    try{
 		                    foursquare.getCheckins(function(c:Array):void{
@@ -335,7 +308,10 @@
 	                            getApp().currentState = '';
 	                            getApp().status = '';
 	                            hideIndicator(friendsLoadingIndicator);
-	                
+		                    });
+		                    
+		                    foursquare.getHistory(20, function(h:Array):void{
+		                    	history.addAll(new ArrayCollection(h));
 		                    });
 	                    }
 	                    catch(e:Error){
@@ -438,10 +414,32 @@
                     venueSearchSubmit.enabled = true;
                     hideIndicator(searchLoadingIndicator);
                 }
-                
+            }
+            
+            private function handleNavButtonClick(e:MouseEvent):void{
+            	nav.getChildren().forEach(function(el:Button, index:int, arr:Array){
+            		el.styleName = '';
+            	});
+            	Button(e.target).styleName = 'selected';
+            }
+            
+            private function resolveXFromIn(e:*):Number{
+            	trace(viewstack1.selectedIndex);
+            	trace(viewstack1.getChildIndex(e.target));
+            	return viewstack1.width;
+            }
+            private function resolveXToOut(e:Event):Number{
+                return 0-viewstack1.width;
             }
         ]]>
     </mx:Script>
+    <mx:Move id="ViewStackTransitionEffectStart" duration="500" xTo="0" ></mx:Move>
+    <mx:Move id="ViewStackTransitionEffectEnd" duration="500"/>
+    <!--<mx:Fade id="ViewStackTransitionEffectStart" duration="500" alphaFrom="0.0" alphaTo="1.0"/>
+    <mx:Zoom id="ViewStackTransitionEffectEnd" captureRollEvents="false"
+zoomWidthFrom="1.0" zoomWidthTo="0.0" zoomHeightFrom="1.0"
+zoomHeightTo="0.0"/> -->
+    
     <mx:VBox width="100%" height="100%">
     <mx:VBox id="login" visible="false" horizontalCenter="0" verticalCenter="0" includeInLayout="false">
         <mx:Image source="@Embed(source='assets/images/foursquare_logo_270.png')"/>
@@ -459,15 +457,15 @@
         </mx:Form>
     </mx:VBox>
     
-    <mx:Canvas id="main" width="100%" height="100%">
+    <mx:Canvas id="main" width="100%" height="100%" horizontalScrollPolicy="off" verticalScrollPolicy="off" >
     <mx:VBox width="100%" height="100%">
         <mx:HBox width="100%" horizontalAlign="left" height="60" backgroundImage="@Embed(source='assets/images/foursquare_header_background.png')" backgroundSize="100%">
             	<mx:HBox verticalAlign="bottom">
             	   <mx:Image source="@Embed(source='assets/images/foursquare_header.png')" width="214" height="58" buttonMode="true" useHandCursor="true" click="navigateToURL(new URLRequest('http://foursquare.com'));" />
-            	   <mx:HBox paddingBottom="10" horizontalGap="1">
-            	   	   <mx:Button label="Friends" click="viewstack1.selectedIndex=0;" styleName="selected"/>
-                       <mx:Button label="Badges" click="viewstack1.selectedIndex=1;"/>
-                       <mx:Button label="Places" click="viewstack1.selectedIndex=2;"/>
+            	   <mx:HBox paddingBottom="10" horizontalGap="1" id="nav">
+            	   	   <mx:Button label="Checkins" click="viewstack1.selectedIndex=0;" styleName="selected"/>
+                       <mx:Button label="History" click="viewstack1.selectedIndex=1;"/>
+                       <mx:Button label="Venues" click="viewstack1.selectedIndex=2;"/>
             	   </mx:HBox>
             	</mx:HBox>
         </mx:HBox>
@@ -475,7 +473,7 @@
             <mx:Canvas label="F" width="100%" height="100%">
                 <mx:VBox width="100%" height="100%">
                     <mx:HBox width="100%">
-                    	<mx:Label text="Friends"  fontSize="11"/>
+                    	<mx:Label text="Where your friends are checking in"  fontSize="11"/>
                     	<mx:SWFLoader id="friendsLoadingIndicator" source="@Embed(source='assets/swf/foursquare_loader.swf')" width="16" height="16" autoLoad="true"/>
                     </mx:HBox>
                     <mx:List dataProvider="{checkins}" width="100%" height="100%" themeColor="#FFFFFF" borderStyle="none"><mx:itemRenderer>
@@ -516,8 +514,46 @@
                     </mx:itemRenderer></mx:List>
                 </mx:VBox>
             </mx:Canvas>
-            <mx:Canvas label="B" width="100%" height="100%">
+            <mx:Canvas label="B" width="100%" height="100%" >
                 <mx:VBox width="100%" height="100%">
+                    <mx:Label text="Where you've been" />
+                    <mx:List dataProvider="{history}" width="100%" height="100%" themeColor="#FFFFFF" borderStyle="none"><mx:itemRenderer>
+                        <mx:Component>
+                            <mx:HBox width="100%" horizontalScrollPolicy="off" verticalScrollPolicy="off" creationComplete="creationComplete();">
+                                <mx:Script>
+                                    <![CDATA[
+                                        import flash.utils.Timer;
+                                        import flash.events.TimerEvent;
+                                        import com.foursquare.util.TimeAgoInWords;
+                                        
+                                        private var t:Timer;
+                                        
+                                        private function creationComplete():void{
+                                            if(t==null && data!=null){
+                                                t = new Timer(60000);
+                                                t.addEventListener(TimerEvent.TIMER, function(e:TimerEvent):void{
+                                                    timeAgo.text = TimeAgoInWords.format(data.created)+' ago';
+                                                });
+                                                t.start();
+                                            }
+                                        }
+                                    ]]>
+                                </mx:Script>
+                                <mx:Canvas width="75" height="75" backgroundImage="http://playfoursquare.s3.amazonaws.com/userpix_thumbs/blank_boy.png" backgroundSize="100%">
+                                <mx:Image source="{data.user.photo}" height="75" width="75" />
+                                </mx:Canvas>
+                                <mx:VBox verticalGap="0" width="100%" borderStyle="solid" cornerRadius="3" horizontalScrollPolicy="off" verticalScrollPolicy="off" backgroundColor="#FFFFFF" paddingLeft="5" paddingRight="5" paddingBottom="5" paddingTop="5">
+                                    <mx:HBox width="100%">
+                                        <mx:Text text="{data.user.name_with_initial}" width="100%" fontSize="11" fontWeight="bold" />
+                                        <mx:Text text="{data.created_in_words}" fontSize="9" id="timeAgo" />
+                                    </mx:HBox>
+                                    <mx:Text text="@ {data.venue.name}" width="100%" fontWeight="bold" fontSize="10" />
+                                    <mx:Text text="&quot;{data.shout}&quot;" includeInLayout="{data.shout!=''}" visible="{data.shout!=''}" width="100%" fontSize="10" />
+                                </mx:VBox>
+                            </mx:HBox>
+                        </mx:Component>
+                    </mx:itemRenderer></mx:List>
+                    <!--
                     <mx:Label text="Your badges" />
                     <mx:List dataProvider="{actor.badges}" width="100%" height="100%" borderStyle="none" themeColor="#FFFFFF"><mx:itemRenderer>
                         <mx:Component>
@@ -530,9 +566,10 @@
                             </mx:HBox>
                         </mx:Component>
                     </mx:itemRenderer></mx:List>
+                    -->
                 </mx:VBox>
             </mx:Canvas>
-            <mx:Canvas label="V" width="100%" height="100%">
+            <mx:Canvas label="V" width="100%" height="100%" >
                 <mx:VBox width="100%" height="100%" verticalGap="1">
                     <mx:HBox width="100%">
                     	<mx:Label id="venuesTitle" text="Popular nearby" width="100%" />
@@ -575,19 +612,22 @@
         </mx:ViewStack>
         <mx:Form width="100%" defaultButton="{shoutSubmit}">
             <mx:HBox width="100%">
-            <mx:Label text="Shout" />
             <mx:TextInput id="shoutText"  width="100%"/>
             <mx:SWFLoader visible="false" includeInLayout="false" id="shoutLoadingIndicator" source="@Embed(source='assets/swf/foursquare_loader.swf')" width="16" height="16" autoLoad="true"/>
-            <mx:Button label="Holler" id="shoutSubmit" click="handleShout();"  cornerRadius="3" fillAlphas="[1.0, 1.0]" fillColors="[#B1CD45, #9CB92E]" color="#FFFFFF" borderColor="#698109" fontSize="12"/>
+            <mx:Button label="Shout" id="shoutSubmit" click="handleShout();"  cornerRadius="3" fillAlphas="[1.0, 1.0]" fillColors="[#B1CD45, #9CB92E]" color="#FFFFFF" borderColor="#698109" fontSize="12"/>
             </mx:HBox>
         </mx:Form>
         
     </mx:VBox>
-    <mx:LinkButton label="Check for updates" click="checkForAppUpdates();" right="100" />
-    <mx:Label text="blarg v {currentVersion}" right="0"/>
     </mx:Canvas>
-    <mx:Box width="100%">
-        <mx:TextArea id="debug" width="100%" height="100" liveScrolling="true"></mx:TextArea>
-    </mx:Box>
+    <mx:TextArea id="debug" width="100%" height="100" liveScrolling="true" visible="false" includeInLayout="false"></mx:TextArea>
+    <mx:HBox width="100%">
+        <mx:HBox width="100%">
+        	<mx:LinkButton label="Check for new checkins" click="checkForUpdates();" right="100"  paddingTop="0" paddingBottom="0" paddingLeft="0" paddingRight="0" fontWeight="normal" textDecoration="underline"/>
+        </mx:HBox>
+    	<mx:LinkButton label="Debug" click="debug.visible=!debug.visible;debug.includeInLayout=!debug.includeInLayout;" right="100"  paddingTop="0" paddingBottom="0" paddingLeft="0" paddingRight="0" fontWeight="normal" fontStyle="normal" textDecoration="underline"/>
+    	<mx:LinkButton label="Check for app update" click="checkForAppUpdates();" right="100"  paddingTop="0" paddingBottom="0" paddingLeft="0" paddingRight="0" fontWeight="normal" textDecoration="underline"/>
+        <mx:Label text="v. {currentVersion}" fontSize="11"/>
+    </mx:HBox>
     </mx:VBox>
 </mx:WindowedApplication>
