--- a/src/style/FourSquairStyle.css
+++ b/src/style/FourSquairStyle.css
@@ -25,6 +25,31 @@
 	
 }
 
+/*for Halo components*/
+
+@font-face {
+	src: url("assets/fonts/arial.ttf");
+	fontFamily: ArialForMx;
+	embedAsCFF: false; 
+	
+}
+
+@font-face {
+	src: url("assets/fonts/Arial Bold.ttf");
+	fontFamily: ArialForMx;
+	fontWeight: bold; 
+	embedAsCFF: false; 
+	
+}
+
+@font-face {
+	src: url("assets/fonts/Arial Italic.ttf");
+	fontFamily: ArialForMx;
+	font-style: italic;
+	embedAsCFF: false; 
+	
+}
+
 global{
 	fontFamily: Arial;
 }
@@ -32,6 +57,16 @@ global{
 s|WindowedApplication{
 	backgroundColor: #999999;
 }
+
+mx|ToolTip {
+	font-family: ArialForMx;
+	backgroundAlpha: .5;
+	backgroundColor: black;
+	color: white;
+	cornerRadius: 4;
+	fontSize: 11;
+}
+
 
 /*login|LoginView{
 	skin-class: ClassReference("com.foursquare.skins.LoginViewSkin");
@@ -42,7 +77,7 @@ s|WindowedApplication{
 }
 
 .navigationButtonBarSkin {
-	skin-class: ClassReference("com.foursquare.skins.NavigationButtonBarSkin");
+	skin-class: ClassReference("com.foursquare.skins.NavigationSkin");
 }
 
 .checkinList{
