--- a/src/com/foursquare/skins/login/LoginViewSkin.mxml
+++ b/src/com/foursquare/skins/login/LoginViewSkin.mxml
@@ -5,9 +5,17 @@
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<s:Rect left="0" right="0" top="0" bottom="0">
-		<s:fill>
-			<s:SolidColor color="0x94bccf" />
-		</s:fill>
-	</s:Rect>
+	<s:states>
+		<s:State name="normal" />
+		<s:State name="disabled" />
+	</s:states>
+	
+	<s:BitmapImage source="@Embed('assets/images/bg-login.png')" resizeMode="repeat" />
+	
+	<s:Group id="contentGroup" left="0" right="0" top="0" bottom="0" minWidth="0" minHeight="0">
+		<s:layout>
+			<s:BasicLayout/>
+		</s:layout>
+	</s:Group>
+	
 </s:Skin>
