--- a/src/FoursquairNew.mxml
+++ b/src/FoursquairNew.mxml
@@ -3,7 +3,6 @@
 	xmlns:foursquare="com.foursquare.*"
 	xmlns:fx="http://ns.adobe.com/mxml/2009" 
 	xmlns:s="library://ns.adobe.com/flex/spark" 
-	xmlns:mx="library://ns.adobe.com/flex/halo"
 	xmlns:login="com.foursquare.views.login.*"
 	xmlns:checkins="com.foursquare.views.checkins.*"
 	xmlns:history="com.foursquare.views.history.*"
@@ -50,11 +49,12 @@
 			invisibleCheck="true"
 			/>
 		
-		<login:LoginView id="loginView" includeIn="login" horizontalCenter="0" verticalCenter="0" />
-		
-		<header:HeaderView id="header" width="100%" height="73" styleName="headerSkin" />
+		<login:LoginView id="loginView" includeIn="login" 
+						 horizontalCenter="0" verticalCenter="0" />
 
 		<s:VGroup width="100%" height="100%" excludeFrom="login">
+			<header:HeaderView id="header" width="100%" height="73" 
+							   styleName="headerSkin" />
 			<checkins:CheckinView	id="checkinView" includeIn="checkin" height="100%" width="100%" 
 							   	hideEffect="{viewStackTransitionEffect}"
 							   	showEffect="{viewStackTransitionEffect}"/>
@@ -66,14 +66,13 @@
 						   		showEffect="{viewStackTransitionEffect}" />
 			
 			<s:HGroup width="100%" height="100" bottom="0">
-				<mx:TextInput id="shoutText" width="100%"/>
+				<s:TextInput id="shoutText" width="100%"/>
 				<s:Button label="Shout" id="shoutSubmit" click="handleShout(shoutText.text)" />
 			</s:HGroup>
 		
 		</s:VGroup>
 		
 		<s:Group>
-			<mx:TextArea id="debug" width="100%" height="100" liveScrolling="true" visible="false" includeInLayout="false"></mx:TextArea>
 			<s:HGroup width="100%">
 				<s:Label text="Logout" click="{logout()}" left="5" textDecoration="underline" excludeFrom="login"/>
 				<s:Label fontSize="11" text="v. {updater.installedVersion}" right="5"/>
@@ -84,8 +83,9 @@
 	</s:VGroup>
 	
 	<s:VGroup width="100%" height="100%" includeIn="splash" horizontalAlign="center" horizontalCenter="0" verticalCenter="0" >
-		<mx:Image source="@Embed(source='assets/images/foursquare_splash.png')" horizontalCenter="0" verticalCenter="0"/>
-		<mx:SWFLoader id="splashLoadingIndicator" source="@Embed(source='assets/swf/foursquare_loader.swf')" width="16" height="16" autoLoad="true" horizontalCenter="0" verticalCenter="0"/>
+		<s:BitmapImage source="@Embed(source='assets/images/foursquare_splash.png')" horizontalCenter="0" verticalCenter="0"/>
+		<!--<mx:SWFLoader id="splashLoadingIndicator" source="@Embed(source='assets/swf/foursquare_loader.swf')"
+					  width="16" height="16" autoLoad="true" horizontalCenter="0" verticalCenter="0"/>-->
 	</s:VGroup>
 	
 </foursquare:FoursquareBase>
