--- a/src/com/foursquare/views/login/LoginView.mxml
+++ b/src/com/foursquare/views/login/LoginView.mxml
@@ -1,36 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SkinnableContainer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		  xmlns:s="library://ns.adobe.com/flex/spark" 
-		  xmlns:mx="library://ns.adobe.com/flex/halo" width="100%" height="100%">
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+		  xmlns:mx="library://ns.adobe.com/flex/halo"
+		  width="100%" height="100%"
+		  keyDown="onKeyDown(event)"
+		  >
+	<s:layout><s:BasicLayout /></s:layout>
 	
 	<fx:Script>
 		<![CDATA[
 			import com.foursquare.events.LoginEvent;
-			public function handleLogin():void{
+			
+			import flash.events.KeyboardEvent;
+			import flash.ui.Keyboard;
+			private function handleLogin():void{
 				var loginEvent:LoginEvent = new LoginEvent(LoginEvent.LOGIN);
 				loginEvent.username = username.text;
 				loginEvent.password = password.text;
 				loginEvent.rememberMe = rememberMe.selected;
 				dispatchEvent( loginEvent );
 			}
+			
+			private function onKeyDown(event:KeyboardEvent):void{
+				if(event.keyCode == Keyboard.ENTER){
+					handleLogin();
+				}
+			}
 		]]>
 	</fx:Script>
 
-	<mx:Image source="@Embed(source='assets/images/foursquare_logo_270.png')"/>
-	<mx:Form defaultButton="{loginSubmit}" id="form1" width="100%">
-		<mx:Label text="Username or phone #" />
-		<mx:TextInput id="username" />
-		
-		<mx:Label text="Password" />
-		<mx:TextInput id="password"  displayAsPassword="true"/>
-		<mx:CheckBox id="rememberMe" selected="true" label="Remember me"/>
-		<mx:HBox width="100%">
-			<s:Button label="Sign in" id="loginSubmit" click="handleLogin();"/>
-			<mx:SWFLoader visible="false" includeInLayout="false" id="loginLoadingIndicator" source="@Embed(source='assets/swf/foursquare_loader.swf')" width="16" height="16" autoLoad="true"/>
-		</mx:HBox>
-	</mx:Form>
+	<s:SkinnableContainer styleName="loginBoxSkin" width="250" height="280" verticalCenter="0" horizontalCenter="0">
+		<s:layout><s:BasicLayout /></s:layout>
+		<s:VGroup verticalCenter="0" left="20" right="20">
+			<s:RichText color="0x818589"><s:span fontWeight='bold' color="0x000000">User Name</s:span> or Mobile #</s:RichText>
+			<s:TextInput id="username" borderVisible="false"
+						 lineHeight="30" height="30" fontSize="18" width="100%" />
+			
+			<s:Label fontWeight="bold" text="Password" />
+			<s:TextInput id="password"  displayAsPassword="true" borderVisible="false"
+						 lineHeight="30" height="30" fontSize="18" width="100%"/>
+			
+			<s:CheckBox id="rememberMe" selected="true" label="Remember me" color="0x818589" />
+			
+			<s:Button id="loginSubmit" label="Login" click="handleLogin()" horizontalCenter="0"
+					  styleName="loginButtonSkin" color="0xffffff" fontWeight="bold" fontSize="18" />
+		</s:VGroup>
+	</s:SkinnableContainer>
 
 </s:SkinnableContainer>
